<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HomeActivity</string>

    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="login_btn_text">Войти!</string>
    <string name="register_btn_text">Зарегистрироваться!</string>

    <string name="register_dialog_title">Регистрация! Йо!</string>

    <string name="register_toast_succeed_text">Регистрация успешна!</string>
    <string name="register_toast_failed_text">Регистрация провалилась!</string>

    <string name="login_failed">Неверный логин и\или пароль!</string>

    <string name="loading_text">Грузим! Грузим...</string>

    <string name="menu_find_people">Найти товарищей</string>
    <string name="find_people_criteria_hint">А ну-ка, поищем!</string>
    <string name="find_people_button_text">Найти!</string>
    <string name="find_all_people_button_text">Найти всех!</string>
    <string name="find_error_text">Ошибка при поиске</string>
    <string name="find_no_result">Ничего не найдено!</string>
    <string name="find_context_menu_add_label">Добавить!</string>

    <string name="add_contact_success_text">Контакт успешно добавлен!</string>
    <string name="add_contact_failure_text">Контакт не был добавлен! Произошла ошибка.</string>

    <string name="send_message_button_text">Отправить сообщение!</string>

    <string name="menu_refresh">Обновить!</string>
    <string name="menu_set_status">Установить статус!</string>
    <string name="menu_payment">Оплатить что-нибудь!</string>

    <string name="delete_user">Удалить его!</string>

    <string name="set_status_hint">Сюда введите статус!</string>
    <string name="set_status_confirm">Поставить статус!</string>

    <string name="payment_get_account_info">Показать что у меня там со счетом</string>
</resources>
