<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <EditText android:id="@+id/login"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:inputType="text"
              android:hint="@string/login"/>

    <EditText android:id="@+id/password"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:hint="@string/password"
              android:inputType="textPassword"/>

    <Button android:id="@+id/login_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_btn_text"/>

</LinearLayout>